tests/ui/nll/closure-requirements/propagate-approximated-fail-no-postdom.stderr
note: no external requirements
  --> $DIR/propagate-approximated-fail-no-postdom.rs:43:9
   |
LL |         |_outlives1, _outlives2, _outlives3, x, y| {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply::{closure#0} with closure args [
               i16,
               for<Region(BrAnon), Region(BrAnon)> extern "rust-call" fn((std::cell::Cell<&'?1 &'^0 u32>, std::cell::Cell<&'?2 &'^0 u32>, std::cell::Cell<&'^1 &'?3 u32>, std::cell::Cell<&'^0 u32>, std::cell::Cell<&'^1 u32>)),
               (),
           ]
   = note: late-bound region is '?7
   = note: late-bound region is '?8
   = note: late-bound region is '?4
   = note: late-bound region is '?5
   = note: late-bound region is '?6

error: lifetime may not live long enough
  --> $DIR/propagate-approximated-fail-no-postdom.rs:46:13
   |
LL |         |_outlives1, _outlives2, _outlives3, x, y| {
   |          ----------              ---------- has type `Cell<&'2 &'?3 u32>`
   |          |
   |          has type `Cell<&'?1 &'1 u32>`
...
LL |             demand_y(x, y, p)
   |             ^^^^^^^^^^^^^^^^^ argument requires that `'1` must outlive `'2`
   |
   = note: requirement occurs because of the type `Cell<&'?34 u32>`, which makes the generic argument `&'?34 u32` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

note: no external requirements
  --> $DIR/propagate-approximated-fail-no-postdom.rs:38:1
   |
LL | fn supply<'a, 'b, 'c>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>, cell_c: Cell<&'c u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply

error: aborting due to 1 previous error

